5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1594_1802.log
== TEST (2019-03-26 17:18:40) 
-- CODE:
from math import*
pv=int(input(""))
d1=int(input(""))
d2=int(input(""))

dano=(sqrt(5*d1)+pi**d2/3)

print(dano)
-- OUTPUT:
322.6991325026012
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:20:10) 
-- CODE:
from math import*
pv=int(input(""))
d1=int(input(""))
d2=int(input(""))

dano=(sqrt(5*d1)+pi**d2/3)

print(dano)
-- EXECUTION TIME:
0.246743
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
322.6991325026012
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
325.94029010015305
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
3.283265528696387
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:01:23) 
-- CODE:
from math import*
pv=int(input(""))
d1=int(input(""))
d2=int(input(""))

dano=(sqrt(5*d1)+pi**d2/3)
monstro=pv-dano
print(dano)
-- OUTPUT:
322.6991325026012
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:01:28) 
-- CODE:
from math import*
pv=int(input(""))
d1=int(input(""))
d2=int(input(""))

dano=(sqrt(5*d1)+pi**d2/3)
monstro=pv-dano
print(monstro)
-- OUTPUT:
-122.69913250260117
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:02:06) 
-- CODE:
from math import*
pv=int(input(""))
d1=int(input(""))
d2=int(input(""))

dano=int((sqrt(5*d1)+pi**d2/3))

monstro=pv-dano
print(monstro)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:07:51) 
-- CODE:
from math import*
pv=int(input(""))
d1=int(input(""))
d2=int(input(""))

dano=int((sqrt(5)*sqrt(d1)+pi**d2/3))

monstro=pv-dano
print(monstro)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:08:21) 
-- CODE:
from math import*
pv=int(input(""))
d1=int(input(""))
d2=int(input(""))

dano=int((sqrt(5)*sqrt(d1)+pi**d2/3))
print(pi)

-- OUTPUT:
3.141592653589793
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:09:27) 
-- CODE:
from math import*
pv=int(input(""))
d1=int(input(""))
d2=int(input(""))

monstro=pv-d1-d2

print(monstro)
-- OUTPUT:
193
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:10:49) 
-- CODE:
from math import*
pv=int(input(""))
d1=int(input(""))
d2=int(input(""))

dano2 =int((sqrt(5)*sqrt(d1)))
dano1=int(pi**d2/3)

dano

monstro=pv-dano

print(monstro)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    dano
NameError: name 'dano' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:11:06) 
-- CODE:
from math import*
pv=int(input(""))
d1=int(input(""))
d2=int(input(""))

dano2 =int((sqrt(5)*sqrt(d1)))
dano1=int(pi**d2/3)
dano=dano2+dano1


monstro=pv-dano

print(monstro)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:12:34) 
-- CODE:
from math import*
PV=int(input(""))
D1=int(input(""))
D2=int(input(""))

dano2 =int((sqrt(5)*sqrt(D1)))
dano1=int(pi**(D2/3))

dano=dano2+dano1


monstro=pv-dano

print(monstro)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    monstro=pv-dano
NameError: name 'pv' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:12:49) 
-- CODE:
from math import*
PV=int(input(""))
D1=int(input(""))
D2=int(input(""))

dano2 =int((sqrt(5)*sqrt(D1)))
dano1=int(pi**(D2/3))

dano=dano2+dano1


monstro=PV-dano

print(monstro)
-- OUTPUT:
189
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:12:59) 
-- CODE:
from math import*
PV=int(input(""))
D1=int(input(""))
D2=int(input(""))

dano2 =int((sqrt(5)*sqrt(D1)))
dano1=int(pi**(D2/3))

dano=dano2+dano1


monstro=PV-dano

print(monstro)
-- EXECUTION TIME:
0.180248
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
189
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
286
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:13:38) 
-- CODE:
from math import*
PV=int(input(""))
D1=int(input(""))
D2=int(input(""))

dano =int((sqrt(5)*sqrt(D1)+pi**(D2/3)))


monstro=PV-dano

print(monstro)
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:13:45) 
-- CODE:
from math import*
PV=int(input(""))
D1=int(input(""))
D2=int(input(""))

dano =int((sqrt(5)*sqrt(D1)+pi**(D2/3)))


monstro=PV-dano

print(monstro)
-- EXECUTION TIME:
0.138451
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
